Bug 117504 - FILEOPEN: DOCX: Before text indent is ignored
Summary: FILEOPEN: DOCX: Before text indent is ignored
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2018-05-08 15:47 UTC by Xisco Faulí
Modified: 2018-05-29 13:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (29.43 KB, image/png)
2018-05-08 15:47 UTC, Xisco Faulí
Details
tdf117504_debugging.diff: fix plus looking for pre-existing unit tests, but none found. (9.92 KB, patch)
2018-05-10 10:49 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-05-08 15:47:35 UTC
Created attachment 141977 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 90844 [details] from bug 72764

Observed behaviour: The first line misses the left indent. See the attached image

Reproduced in

Version: 6.1.0.0.alpha1+
Build ID: 1e2afc9bd3062cfba6b65b45c17a08f298014239
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-05-08 15:48:46 UTC
Regression introduced by:

author	Justin Luth <justin_luth@sil.org>	2018-01-23 21:56:00 +0300
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-26 12:41:18 +0100
commit cc1c9c7484d97167021301f32c3397124c4d79f5 (patch)
tree 06985e54fbd97618f6c2fc948a00540b582780b8
parent 232251e11aecf051bc0e2a915e5af6c0d3650469 (diff)
tdf#95377 ooxmlimport: treat default style like named styles

Bisected with: bibisect-linux64-6.1

Adding Cc: to Justin Luth
Comment 2 Justin L 2018-05-09 11:07:10 UTC
Note: remove the comment, and the document opens as expected.
Comment 3 Justin L 2018-05-10 10:49:37 UTC
Created attachment 142011 [details]
tdf117504_debugging.diff: fix plus looking for pre-existing unit tests, but none found.
Comment 4 Justin L 2018-05-10 15:00:27 UTC
It seems like this has exposed an existing problem. Proposed fix: https://gerrit.libreoffice.org/54085 tdf#117504 ooxmlimport: check paragraph props for actual style

and preparatory commit https://gerrit.libreoffice.org/54084 writerfilter NFC: save ConvertedParaStyleName, not WW8Name

In fact, I should consider removing m_sCurrentParaStyleName altogether in the 6.2 branch.
Comment 5 Commit Notification 2018-05-16 09:26:11 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8920d865ee148518bf71f71ce1866b24cc17c07e

tdf#117504 ooxmlimport: check paragraph props for actual style

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-05-29 12:56:45 UTC
Verified in

Version: 6.1.0.0.beta1+
Build ID: da49f4aeb8d5e9a7d2cba8855d911e7cc1d2f1e2
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

@Justin Luth, Thanks for fixing this!!
Comment 7 Justin L 2018-05-29 13:37:20 UTC
(In reply to Justin L from comment #4)
> In fact, I should consider removing m_sCurrentParaStyleName altogether in
> the 6.2 branch.
m_sCurrentParaStyleName might be still needed - it can apparently be set at a section context level, where it cannot be written as a property. Although removing it does not break any unit tests, there is no point in removing it since there is a regression potential.